// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema for 'US_MA' 'AHb2c6' 1`] = `
{
  "displayId": "JGtr1K",
  "facilityId": "DEMO FACILITY",
  "gender": "MALE",
  "metadata": {
    "adjustedMaxReleaseDate": "2026-12-15",
    "creditActivity": [
      {
        "activity": "SOR Adult Secondary Education-Educ",
        "activityCode": "EDUC",
        "activityType": "Education Release Activity",
        "creditDate": "2021-08-31",
        "creditType": "EARNED_GOOD_TIME",
        "creditsEarned": "7.5",
        "rating": "S",
      },
      {
        "activity": "SOR Adult Secondary Education-Prog",
        "activityCode": "PROG",
        "activityType": "Institutional Programs",
        "creditDate": "2021-08-31",
        "creditType": "EARNED_GOOD_TIME",
        "creditsEarned": 0,
        "rating": "S",
      },
      {
        "activity": "Violence Reduction Program (Prog)",
        "activityCode": "PROG",
        "activityType": "Institutional Programs",
        "creditDate": "2021-08-31",
        "creditType": "EARNED_GOOD_TIME",
        "creditsEarned": "7.5",
        "rating": "S",
      },
      {
        "activity": "SOR Adult Secondary Education-Educ",
        "activityCode": "EDUC",
        "activityType": "Education Release Activity",
        "creditDate": "2021-09-30",
        "creditType": "EARNED_GOOD_TIME",
        "creditsEarned": "7.5",
        "rating": "S",
      },
      {
        "activity": "SOR Adult Secondary Education-Prog",
        "activityCode": "PROG",
        "activityType": "Institutional Programs",
        "creditDate": "2021-09-30",
        "creditType": "EARNED_GOOD_TIME",
        "creditsEarned": "7.5",
        "rating": "S",
      },
      {
        "activity": "Violence Reduction Program (Prog)",
        "activityCode": "PROG",
        "activityType": "Institutional Programs",
        "creditDate": "2021-09-30",
        "creditType": "EARNED_GOOD_TIME",
        "creditsEarned": 0,
        "rating": "I",
      },
      {
        "activity": "SOR Adult Secondary Education-Educ",
        "activityCode": "EDUC",
        "activityType": "Education Release Activity",
        "creditDate": "2021-10-31",
        "creditType": "EARNED_GOOD_TIME",
        "creditsEarned": "7.5",
        "rating": "S",
      },
      {
        "activity": "SOR Adult Secondary Education-Prog",
        "activityCode": "PROG",
        "activityType": "Institutional Programs",
        "creditDate": "2021-10-31",
        "creditType": "EARNED_GOOD_TIME",
        "creditsEarned": "7.5",
        "rating": "S",
      },
      {
        "activity": "Violence Reduction Program (Prog)",
        "activityCode": "PROG",
        "activityType": "Institutional Programs",
        "creditDate": "2021-10-31",
        "creditType": "EARNED_GOOD_TIME",
        "creditsEarned": 0,
        "rating": "S",
      },
      {
        "activity": "Violence Reduction Program (Prog) (BOOST)",
        "activityCode": "PROG",
        "activityType": "Institutional Programs",
        "creditDate": "2021-10-31",
        "creditType": "BOOST",
        "creditsEarned": 10,
        "rating": "S",
      },
      {
        "activity": "Violence Reduction Program (Prog) (COMPLETION)",
        "activityCode": "PROG",
        "activityType": "Institutional Programs",
        "creditDate": "2021-10-31",
        "creditType": "COMPLETION",
        "creditsEarned": 30,
        "rating": "S",
      },
    ],
    "lastUpdatedDate": "2021-12-16",
    "originalMaxReleaseDate": "2027-02-16",
    "rtsDate": "2026-11-15",
    "totalCompletionCredit": 30,
    "totalCompletionCreditDaysCalculated": 30,
    "totalStateCredit": 63,
    "totalStateCreditDaysCalculated": 63,
  },
  "personExternalId": "AHb2c6",
  "personName": {
    "givenNames": "Leroy",
    "middleNames": undefined,
    "surname": "Moen",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "dJ5fLxnJrhLd3PcT",
  "stateCode": "US_MA",
}
`;

exports[`schema for 'US_MA' 'SAHawR' 1`] = `
{
  "displayId": "QYMcBt",
  "facilityId": "DEMO FACILITY",
  "gender": "MALE",
  "metadata": {
    "adjustedMaxReleaseDate": "2023-11-03",
    "creditActivity": [
      {
        "activity": "Institutional Employment",
        "activityCode": "WORK",
        "activityType": "Institutional Work",
        "creditDate": "2021-08-31",
        "creditType": "EARNED_GOOD_TIME",
        "creditsEarned": "7.5",
        "rating": "S",
      },
      {
        "activity": "Institutional Employment",
        "activityCode": "WORK",
        "activityType": "Institutional Work",
        "creditDate": "2021-09-30",
        "creditType": "EARNED_GOOD_TIME",
        "creditsEarned": "7.5",
        "rating": "S",
      },
      {
        "activity": "Reentry Readiness Workshop",
        "activityCode": "PROG",
        "activityType": "Institutional Programs",
        "creditDate": "2021-09-30",
        "creditType": "EARNED_GOOD_TIME",
        "creditsEarned": 5,
        "rating": "S",
      },
      {
        "activity": "Institutional Employment",
        "activityCode": "WORK",
        "activityType": "Institutional Work",
        "creditDate": "2021-10-31",
        "creditType": "EARNED_GOOD_TIME",
        "creditsEarned": "7.5",
        "rating": "S",
      },
      {
        "activity": "Reentry Readiness Workshop",
        "activityCode": "PROG",
        "activityType": "Institutional Programs",
        "creditDate": "2021-10-31",
        "creditType": "EARNED_GOOD_TIME",
        "creditsEarned": 5,
        "rating": "S",
      },
    ],
    "lastUpdatedDate": "2021-12-16",
    "originalMaxReleaseDate": "2023-11-04",
    "rtsDate": null,
    "totalCompletionCredit": null,
    "totalCompletionCreditDaysCalculated": null,
    "totalStateCredit": 133,
    "totalStateCreditDaysCalculated": 1,
  },
  "personExternalId": "SAHawR",
  "personName": {
    "givenNames": "Lonnie",
    "middleNames": "Jack",
    "surname": "Weimann",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "WkhSJBeikeuSwTHD",
  "stateCode": "US_MA",
}
`;

exports[`schema for 'US_MA' 'fR1ywV' 1`] = `
{
  "displayId": "f3TSaZ",
  "facilityId": "DEMO FACILITY",
  "gender": "MALE",
  "metadata": {
    "adjustedMaxReleaseDate": null,
    "creditActivity": [
      {
        "activity": "Institutional Employment",
        "activityCode": "WORK",
        "activityType": "Institutional Work",
        "creditDate": "2021-08-31",
        "creditType": "EARNED_GOOD_TIME",
        "creditsEarned": "7.5",
        "rating": "S",
      },
      {
        "activity": "Institutional Employment",
        "activityCode": "WORK",
        "activityType": "Institutional Work",
        "creditDate": "2021-09-30",
        "creditType": "EARNED_GOOD_TIME",
        "creditsEarned": "7.5",
        "rating": "S",
      },
      {
        "activity": "Institutional Employment",
        "activityCode": "WORK",
        "activityType": "Institutional Work",
        "creditDate": "2021-10-31",
        "creditType": "EARNED_GOOD_TIME",
        "creditsEarned": "7.5",
        "rating": "S",
      },
    ],
    "lastUpdatedDate": "2021-12-16",
    "originalMaxReleaseDate": null,
    "rtsDate": null,
    "totalCompletionCredit": 80,
    "totalCompletionCreditDaysCalculated": null,
    "totalStateCredit": 988,
    "totalStateCreditDaysCalculated": null,
  },
  "personExternalId": "fR1ywV",
  "personName": {
    "givenNames": "Frank",
    "middleNames": undefined,
    "surname": "Thompson",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "3HjQFGyJnaqhhDjI",
  "stateCode": "US_MA",
}
`;

exports[`schema for 'US_ME' 'RES001' 1`] = `
{
  "admissionDate": 2013-11-16T00:00:00.000Z,
  "custodyLevel": "MINIMUM",
  "displayId": "dRES001",
  "facilityId": "FACILITY NAME",
  "gender": "MALE",
  "officerId": "OFFICER5",
  "personExternalId": "RES001",
  "personName": {
    "givenNames": "First",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "2/3",
  "pseudonymizedId": "anonres001",
  "releaseDate": 2024-11-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT A",
  "usMePortionNeededEligibleDate": 2021-11-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES002' 1`] = `
{
  "admissionDate": 2018-02-17T00:00:00.000Z,
  "custodyLevel": "MINIMUM",
  "displayId": "dRES002",
  "facilityId": "FACILITY NAME",
  "gender": "FEMALE",
  "officerId": "OFFICER5",
  "personExternalId": "RES002",
  "personName": {
    "givenNames": "Second",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "2/3",
  "pseudonymizedId": "anonres002",
  "releaseDate": 2024-02-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2022-02-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES003' 1`] = `
{
  "admissionDate": 2019-06-18T00:00:00.000Z,
  "custodyLevel": "MINIMUM",
  "displayId": "dRES003",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS_FEMALE",
  "officerId": "OFFICER5",
  "personExternalId": "RES003",
  "personName": {
    "givenNames": "Third",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres003",
  "releaseDate": 2023-12-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2021-09-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES004' 1`] = `
{
  "admissionDate": 2019-05-18T00:00:00.000Z,
  "custodyLevel": "COMMUNITY",
  "displayId": "dRES004",
  "facilityId": "FACILITY NAME",
  "gender": "INTERNAL_UNKNOWN",
  "officerId": "OFFICER5",
  "personExternalId": "RES004",
  "personName": {
    "givenNames": "Fourth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres004",
  "releaseDate": 2024-01-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT A",
  "usMePortionNeededEligibleDate": 2021-09-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES005' 1`] = `
{
  "admissionDate": 2020-05-16T00:00:00.000Z,
  "custodyLevel": "MINIMUM",
  "displayId": "dRES005",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS",
  "officerId": "OFFICER5",
  "personExternalId": "RES005",
  "personName": {
    "givenNames": "Fifth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres005",
  "releaseDate": 2024-05-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2022-05-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES006' 1`] = `
{
  "admissionDate": 2015-02-16T00:00:00.000Z,
  "custodyLevel": "MINIMUM",
  "displayId": "dRES006",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS",
  "officerId": "OFFICER5",
  "personExternalId": "RES006",
  "personName": {
    "givenNames": "Sixth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "2/3",
  "pseudonymizedId": "anonres006",
  "releaseDate": 2024-02-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2021-02-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES007' 1`] = `
{
  "admissionDate": 2019-06-16T00:00:00.000Z,
  "custodyLevel": "MINIMUM",
  "displayId": "dRES007",
  "facilityId": "FACILITY NAME",
  "gender": "FEMALE",
  "officerId": "OFFICER5",
  "personExternalId": "RES007",
  "personName": {
    "givenNames": "Seventh",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres007",
  "releaseDate": 2023-12-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2021-09-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES008' 1`] = `
{
  "admissionDate": 2015-08-16T00:00:00.000Z,
  "custodyLevel": "MINIMUM",
  "displayId": "dRES008",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS",
  "officerId": "OFFICER5",
  "personExternalId": "RES008",
  "personName": {
    "givenNames": "Eighth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "2/3",
  "pseudonymizedId": "anonres008",
  "releaseDate": 2024-08-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT A",
  "usMePortionNeededEligibleDate": 2021-08-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES009' 1`] = `
{
  "admissionDate": 2014-12-16T00:00:00.000Z,
  "custodyLevel": "MINIMUM",
  "displayId": "dRES009",
  "facilityId": "FACILITY NAME",
  "gender": "MALE",
  "officerId": "OFFICER5",
  "personExternalId": "RES009",
  "personName": {
    "givenNames": "Ninth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres009",
  "releaseDate": 2025-02-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT A",
  "usMePortionNeededEligibleDate": 2020-01-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES998' 1`] = `
{
  "admissionDate": 2020-05-16T00:00:00.000Z,
  "custodyLevel": "MEDIUM",
  "displayId": "dRES998",
  "facilityId": "FACILITY NAME",
  "gender": "MALE",
  "officerId": "OFFICER5",
  "personExternalId": "RES998",
  "personName": {
    "givenNames": "NoRelease",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres998",
  "stateCode": "US_ME",
  "unitId": "UNIT B",
}
`;

exports[`schema for 'US_ME' 'RES999' 1`] = `
{
  "admissionDate": 2020-05-16T00:00:00.000Z,
  "custodyLevel": "MEDIUM",
  "displayId": "dRES999",
  "facilityId": "FACILITY NAME",
  "gender": "MALE",
  "officerId": "OFFICER5",
  "personExternalId": "RES999",
  "personName": {
    "givenNames": "Ineligible",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres999",
  "releaseDate": 2025-05-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2022-11-16T00:00:00.000Z,
}
`;
